--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {
+body, .sticky-footer-wrapper {
+   min-height:100vh;
+}
+
+.flex-fill {
+   flex:1 1 auto;
 }
 
 #wrapper {
@@ -24,6 +29,10 @@ body {
    background-color: #555;
    color: white;
    padding: 15px;
+   position: absolute;
+   bottom:0px;
+   min-width: 100%;
+   max-width: 100%;
  }
 
  /* On small screens, set height to 'auto' for sidenav and grid */
@@ -34,7 +43,3 @@ body {
    }
    .row.content {height:auto;}
  }
-
-.checked{
-  color:orange;
-}
