--- a/style.css
+++ b/style.css
@@ -71,3 +71,33 @@ input[type="radio"]:invalid::after{
   content:'\2606';
   color:#ccc;
 }
+
+//settings Page
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,900|Montserrat|Roboto");
+.settings{
+/*  background: linear-gradient(to right, #2ed573, #f9ca24);*/
+  overflow-x: hidden;
+}
+.container{
+  background: #fff;
+  width: 540px;
+  height: 450px;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 10%;
+  box-shadow: 2px 5px 20px rgba(119, 119,119, .5);
+}
+.leftbox{
+  float: left;
+  top: -5%;
+  left: 5%;
+  position: absolute;
+  width: 15%;
+  height: 110%;
+  background:#2ed573;
+  box-shadow: 3px 3px 10px rgba(119, 119,119, .5);
+  border: .lem solid #fff;
+}
+.rightbox{
+  display: none;
+}
