--- a/style.css
+++ b/style.css
@@ -8,22 +8,18 @@ body, .sticky-footer-wrapper {
 .flex-fill {
    flex:1 1 auto;
 }
-#wrapper {
-    overflow-x: hidden;
- }
+#wrapper {overflow-x: hidden;}
  .navbar {
    margin-bottom: 0;
    border-radius: 0;
  }
- /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
- .row.content {height: 450px}
+.row.content {height: 450px}
  /* Set gray background color and 100% height */
  .sidenav {
    padding-top: 20px;
    background-color: #f1f1f1;
    height: 100%;
  }
- /* Set black background color, white text and some padding */
  footer {
    background-color: #555;
    color: white;
@@ -31,14 +27,10 @@ body, .sticky-footer-wrapper {
    bottom:0px;
    min-width: 100%;
    max-width: 100%;
-   position: absolute;
+   position: relative;
  }
- /* On small screens, set height to 'auto' for sidenav and grid */
  @media screen and (max-width: 767px) {
-   .sidenav {
-     height: auto;
-     padding: 15px;
-   }
+   .sidenav {height: auto; padding: 15px;}
    .row.content {height:auto;}
  }
 /*Star rating*/
@@ -52,44 +44,22 @@ input[type="radio"]::after{
   content:'\2605';
   font-size:32px;
 }
-input[type="radio"]:invalid::after{
-  color:#ccc;
-}
-.rating:hover input[type="radio"]:hover ~ input[type="radio"]:invalid::after,
-.rating input[type="radio"]:focus ~ input[type="radio"]:invalid::after
-{
-  color:#ccc;
-}
-.rating input[type="radio"]:valid{
-  color:orange;
-}
-.rating input[type="radio"]:checked ~ input[type="radio"]:not(:checked)::after
-{
-  content:'\2606';
-  color:#ccc;
-}
-/*settings page*/
+input[type="radio"]:invalid::after{color:#ccc;}
+.rating:hover input[type="radio"]:hover ~ input[type="radio"]:invalid::after, .rating input[type="radio"]:focus ~ input[type="radio"]:invalid::after{color:#ccc;}
+.rating input[type="radio"]:valid{color:orange;}
+.rating input[type="radio"]:checked ~ input[type="radio"]:not(:checked)::after{content:'\2606';color:#ccc;}
 
-/* Set gray background color and 100% height */
-.sidenav {
-  background-color: #f1f1f1;
-  height: 100%;
-}
-
-  .row.content {height: auto;}
-}
-/*Reg*/
-*,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
-.clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
-
+/*Registration and login*/
+*,:after,:before{box-sizing:border-box;}
+.clearfix:after,.clearfix:before{content:'';display:table;}
+.clearfix:after{clear:both;display:block;}
+a{color:inherit;text-decoration:none;}
 .login-wrap{
 	width:100%;
 	margin:auto;
 	max-width:525px;
 	min-height:670px;
-	position:relative;
+	position: relative;
 	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
@@ -100,8 +70,7 @@ a{color:inherit;text-decoration:none}
 	padding:90px 70px 50px 70px;
 	background:rgba(40,57,101,.9);
 }
-.login-html .sign-in-htm,
-.login-html .sign-up-htm{
+.login-html .sign-in-htm, .login-html .sign-up-htm{
 	top:0;
 	left:0;
 	right:0;
@@ -111,16 +80,8 @@ a{color:inherit;text-decoration:none}
 	backface-visibility:hidden;
 	transition:all .4s linear;
 }
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check{
-	display:none;
-}
-.login-html .tab,
-.login-form .group .label,
-.login-form .group .button{
-	text-transform:uppercase;
-}
+.login-html .sign-in, .login-html .sign-up, .login-form .group .check{display:none;}
+.login-html .tab, .login-form .group .label, .login-form .group .button{ text-transform:uppercase; }
 .login-html .tab{
 	font-size:22px;
 	margin-right:15px;
@@ -129,29 +90,20 @@ a{color:inherit;text-decoration:none}
 	display:inline-block;
 	border-bottom:2px solid transparent;
 }
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab{
-	color:#fff;
-	border-color:#1161ee;
-}
+.login-html .sign-in:checked + .tab, .login-html .sign-up:checked + .tab{ color:#fff; border-color:#1161ee;}
 .login-form{
 	min-height:345px;
 	position:relative;
 	perspective:1000px;
 	transform-style:preserve-3d;
 }
-.login-form .group{
-	margin-bottom:15px;
-}
-.login-form .group .label,
-.login-form .group .input,
-.login-form .group .button{
+.login-form .group{margin-bottom:15px;}
+.login-form .group .label, .login-form .group .input, .login-form .group .button{
 	width:100%;
 	color:#fff;
 	display:block;
 }
-.login-form .group .input,
-.login-form .group .button{
+.login-form .group .input, .login-form .group .button{
 	border:none;
 	padding:15px 20px;
 	border-radius:25px;
@@ -165,9 +117,7 @@ a{color:inherit;text-decoration:none}
 	color:#aaa;
 	font-size:12px;
 }
-.login-form .group .button{
-	background:#1161ee;
-}
+.login-form .group .button{background:#1161ee;}
 .login-form .group label .icon{
 	width:15px;
 	height:15px;
@@ -176,8 +126,7 @@ a{color:inherit;text-decoration:none}
 	display:inline-block;
 	background:rgba(255,255,255,.1);
 }
-.login-form .group label .icon:before,
-.login-form .group label .icon:after{
+.login-form .group label .icon:before, .login-form .group label .icon:after{
 	content:'';
 	width:10px;
 	height:2px;
@@ -196,30 +145,24 @@ a{color:inherit;text-decoration:none}
 	right:0;
 	transform:scale(0) rotate(0);
 }
-.login-form .group .check:checked + label{
-	color:#fff;
-}
-.login-form .group .check:checked + label .icon{
-	background:#1161ee;
-}
-.login-form .group .check:checked + label .icon:before{
-	transform:scale(1) rotate(45deg);
-}
-.login-form .group .check:checked + label .icon:after{
-	transform:scale(1) rotate(-45deg);
-}
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
-	transform:rotate(0);
-}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
-	transform:rotate(0);
-}
-
+.login-form .group .check:checked + label{color:#fff;}
+.login-form .group .check:checked + label .icon{background:#1161ee;}
+.login-form .group .check:checked + label .icon:before{transform:scale(1) rotate(45deg);}
+.login-form .group .check:checked + label .icon:after{transform:scale(1) rotate(-45deg);}
+.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{transform:rotate(0);}
+.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{transform:rotate(0);}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
 	background:rgba(255,255,255,.2);
 }
-.foot-lnk{
-	text-align:center;
+.foot-lnk{text-align:center;}
+
+
+
+/*Home page*/
+.homepagebanner{
+  width: 100%;
+    max-width: 400px;
+  height: auto;
 }
