Added Style For SupportPage JS

--- a/style.css
+++ b/style.css
@@ -166,3 +166,11 @@ a{color:inherit;text-decoration:none;}
     max-width: 400px;
   height: auto;
 }
+
+/*Support Page*/
+.hidden{
+  display: none;
+}
+.clickable{
+  cursor: pointer;
+}
