--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body, .sticky-footer-wrapper {
    min-height:100vh;
    margin:0;
-   color:#6a6f8c;
-   background:#c8c8c8;
+   color:black;
+   background:white;
    font:600 16px/18px 'Open Sans',sans-serif;
 }
 .flex-fill {
@@ -23,15 +23,22 @@ body, .sticky-footer-wrapper {
  footer {
    background-color: #555;
    color: white;
-   padding: 15px;
-   bottom:0px;
-   min-width: 100%;
-   max-width: 100%;
-   position: relative;
+   position: fixed;
+   height: 60px;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
+   vertical-align: middle;
+   line-height: 60px;
  }
  @media screen and (max-width: 767px) {
    .sidenav {height: auto; padding: 15px;}
    .row.content {height:auto;}
+ }
+
+ .well{
+   background-color:#afafae;
+   border:4px solid black;
  }
 /*Star rating*/
 input[type="radio"]{
@@ -47,7 +54,7 @@ input[type="radio"]::after{
 input[type="radio"]:invalid::after{color:#ccc;}
 .rating:hover input[type="radio"]:hover ~ input[type="radio"]:invalid::after, .rating input[type="radio"]:focus ~ input[type="radio"]:invalid::after{color:#ccc;}
 .rating input[type="radio"]:valid{color:orange;}
-.rating input[type="radio"]:checked ~ input[type="radio"]:not(:checked)::after{content:'\2606';color:#ccc;}
+.rating input[type="radio"]:checked ~ input[type="radio"]:not(:checked)::after{content:'\2606';color:gray;}
 
 /*Registration and login*/
 *,:after,:before{box-sizing:border-box;}
@@ -68,7 +75,7 @@ a{color:inherit;text-decoration:none;}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:rgba(40,57,101,.9);  
 }
 .login-html .sign-in-htm, .login-html .sign-up-htm{
 	top:0;
