--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, .sticky-footer-wrapper {
 .flex-fill {
    flex:1 1 auto;
 }
+
 #wrapper {overflow-x: hidden;}
  .navbar {
    margin-bottom: 0;
@@ -75,7 +76,7 @@ a{color:inherit;text-decoration:none;}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);  
+	background:rgba(40,57,101,.9);
 }
 .login-html .sign-in-htm, .login-html .sign-up-htm{
 	top:0;
@@ -172,4 +173,41 @@ a{color:inherit;text-decoration:none;}
   width: 100%;
     max-width: 400px;
   height: auto;
+}
+
+
+/*Chat Roulette*/
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+.row.content {height: 450px}
+
+/* Set gray background color and 100% height */
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
+}
+
+/* Set black background color, white text and some padding */
+footer {
+  background-color: #555;
+  color: white;
+  padding: 15px;
+}
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content {height:auto;}
+}
+#chatr{
+  text-align: center;
 }
