--- a/style.css
+++ b/style.css
@@ -163,8 +163,10 @@ a{color:inherit;text-decoration:none;}
 	height:2px;
 	margin:60px 0 50px 0;
 	background:rgba(255,255,255,.2);
+
 }
 .foot-lnk{text-align:center;}
+
 
 
 
@@ -291,4 +293,20 @@ footer {
 	height:23.4%;
 	margin-bottom:3.5%;
 	width:100%;
+}
+
+
+/*Settings Page*/
+
+
+.container {
+  height: auto;
+  max-width: 50%;
+  margin: 25px auto;
+  background-color: #D3D3D3;
+}
+.settingsContainer{
+  height: auto;
+  max-width: 50%;
+  margin: 25px auto;
 }
