--- a/style.css
+++ b/style.css
@@ -1,216 +1,228 @@
 body, .sticky-footer-wrapper {
-   min-height:100vh;
-   margin:0;
-   color:black;
-   background:white;
-   font:600 16px/18px 'Open Sans',sans-serif;
+  min-height: 100vh;
+  margin: 0;
+  color: black;
+  background: white;
+  font: 600 16px/18px 'Open Sans', sans-serif;
 }
 .flex-fill {
-   flex:1 1 auto;
+  flex: 1 1 auto;
 }
-
-#wrapper {overflow-x: hidden;}
- .navbar {
-   margin-bottom: 0;
-   border-radius: 0;
- }
-.row.content {height: 450px}
- /* Set gray background color and 100% height */
- .sidenav {
-   padding-top: 20px;
-   background-color: #f1f1f1;
-   height: 100%;
- }
- footer {
-   background-color: #555;
-   color: white;
-   position: fixed;
-   height: 60px;
-   bottom: 0;
-   width: 100%;
-   text-align: center;
-   vertical-align: middle;
-   line-height: 60px;
- }
- @media screen and (max-width: 767px) {
-   .sidenav {height: auto; padding: 15px;}
-   .row.content {height:auto;}
- }
-
- .well{
-   background-color:#afafae;
-   border:4px solid black;
- }
-/*Star rating*/
-input[type="radio"]{
-  -webkit-appearance: none;
-  box-shadow:none;
-  outline:none;
-  cursor:pointer;
+#wrapper {
+  overflow-x: hidden;
 }
-input[type="radio"]::after{
-  content:'\2605';
-  font-size:32px;
-}
-input[type="radio"]:invalid::after{color:#ccc;}
-.rating:hover input[type="radio"]:hover ~ input[type="radio"]:invalid::after, .rating input[type="radio"]:focus ~ input[type="radio"]:invalid::after{color:#ccc;}
-.rating input[type="radio"]:valid{color:orange;}
-.rating input[type="radio"]:checked ~ input[type="radio"]:not(:checked)::after{content:'\2606';color:gray;}
-
-/*Registration and login*/
-*,:after,:before{box-sizing:border-box;}
-.clearfix:after,.clearfix:before{content:'';display:table;}
-.clearfix:after{clear:both;display:block;}
-a{color:inherit;text-decoration:none;}
-.login-wrap{
-	width:100%;
-	margin:auto;
-	max-width:525px;
-	min-height:670px;
-	position: relative;
-	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-}
-.login-html{
-	width:100%;
-	height:100%;
-	position:absolute;
-	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
-}
-.login-html .sign-in-htm, .login-html .sign-up-htm{
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	position:absolute;
-	transform:rotateY(180deg);
-	backface-visibility:hidden;
-	transition:all .4s linear;
-}
-.login-html .sign-in, .login-html .sign-up, .login-form .group .check{display:none;}
-.login-html .tab, .login-form .group .label, .login-form .group .button{ text-transform:uppercase; }
-.login-html .tab{
-	font-size:22px;
-	margin-right:15px;
-	padding-bottom:5px;
-	margin:0 15px 10px 0;
-	display:inline-block;
-	border-bottom:2px solid transparent;
-}
-.login-html .sign-in:checked + .tab, .login-html .sign-up:checked + .tab{ color:#fff; border-color:#1161ee;}
-.login-form{
-	min-height:345px;
-	position:relative;
-	perspective:1000px;
-	transform-style:preserve-3d;
-}
-.login-form .group{margin-bottom:15px;}
-.login-form .group .label, .login-form .group .input, .login-form .group .button{
-	width:100%;
-	color:#fff;
-	display:block;
-}
-.login-form .group .input, .login-form .group .button{
-	border:none;
-	padding:15px 20px;
-	border-radius:25px;
-	background:rgba(255,255,255,.1);
-}
-.login-form .group input[data-type="password"]{
-	text-security:circle;
-	-webkit-text-security:circle;
-}
-.login-form .group .label{
-	color:#aaa;
-	font-size:12px;
-}
-.login-form .group .button{background:#1161ee;}
-.login-form .group label .icon{
-	width:15px;
-	height:15px;
-	border-radius:2px;
-	position:relative;
-	display:inline-block;
-	background:rgba(255,255,255,.1);
-}
-.login-form .group label .icon:before, .login-form .group label .icon:after{
-	content:'';
-	width:10px;
-	height:2px;
-	background:#fff;
-	position:absolute;
-	transition:all .2s ease-in-out 0s;
-}
-.login-form .group label .icon:before{
-	left:3px;
-	width:5px;
-	bottom:6px;
-	transform:scale(0) rotate(0);
-}
-.login-form .group label .icon:after{
-	top:6px;
-	right:0;
-	transform:scale(0) rotate(0);
-}
-.login-form .group .check:checked + label{color:#fff;}
-.login-form .group .check:checked + label .icon{background:#1161ee;}
-.login-form .group .check:checked + label .icon:before{transform:scale(1) rotate(45deg);}
-.login-form .group .check:checked + label .icon:after{transform:scale(1) rotate(-45deg);}
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{transform:rotate(0);}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{transform:rotate(0);}
-.hr{
-	height:2px;
-	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
-
-}
-.foot-lnk{text-align:center;}
-
-
-
-
-/*Home page*/
-.homepagebanner{
-  width: 100%;
-  height: auto;
-}
-
-
-/*Chat Roulette*/
-/* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
 }
-
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
-
+.row.content {
+  height: 450px
+}
 /* Set gray background color and 100% height */
 .sidenav {
   padding-top: 20px;
   background-color: #f1f1f1;
   height: 100%;
 }
-
-/* Set black background color, white text and some padding */
 footer {
   background-color: #555;
   color: white;
-  padding: 15px;
+  position: fixed;
+  height: 60px;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 60px;
 }
-
-/* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
     height: auto;
     padding: 15px;
   }
-  .row.content {height:auto;}
+  .row.content {
+    height: auto;
+  }
 }
-#chatr{
+.well {
+  background-color: #afafae;
+  border: 4px solid black;
+}
+
+/*Rating Page*/
+input[type="radio"] {
+  -webkit-appearance: none;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+}
+input[type="radio"]::after {
+  content: '\2605';
+  font-size: 32px;
+}
+input[type="radio"]:invalid::after {
+  color: #ccc;
+}
+.rating:hover input[type="radio"]:hover~input[type="radio"]:invalid::after, .rating input[type="radio"]:focus~input[type="radio"]:invalid::after {
+  color: #ccc;
+}
+.rating input[type="radio"]:valid {
+  color: orange;
+}
+.rating input[type="radio"]:checked~input[type="radio"]:not(:checked)::after {
+  content: '\2606';
+  color: gray;
+}
+
+/*Registration and login*/
+*, :after, :before {
+  box-sizing: border-box;
+}
+.clearfix:after, .clearfix:before {
+  content: '';
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+  display: block;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+.login-wrap {
+  width: 100%;
+  margin: auto;
+  max-width: 525px;
+  min-height: 670px;
+  position: relative;
+  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+}
+.login-html {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 90px 70px 50px 70px;
+  background: rgba(40, 57, 101, .9);
+}
+.login-html .sign-in-htm, .login-html .sign-up-htm {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  transition: all .4s linear;
+}
+.login-html .sign-in, .login-html .sign-up, .login-form .group .check {
+  display: none;
+}
+.login-html .tab, .login-form .group .label, .login-form .group .button {
+  text-transform: uppercase;
+}
+.login-html .tab {
+  font-size: 22px;
+  margin-right: 15px;
+  padding-bottom: 5px;
+  margin: 0 15px 10px 0;
+  display: inline-block;
+  border-bottom: 2px solid transparent;
+}
+.login-html .sign-in:checked+.tab, .login-html .sign-up:checked+.tab {
+  color: #fff;
+  border-color: #1161ee;
+}
+.login-form {
+  min-height: 345px;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+.login-form .group {
+  margin-bottom: 15px;
+}
+.login-form .group .label, .login-form .group .input, .login-form .group .button {
+  width: 100%;
+  color: #fff;
+  display: block;
+}
+.login-form .group .input, .login-form .group .button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 25px;
+  background: rgba(255, 255, 255, .1);
+}
+.login-form .group input[data-type="password"] {
+  text-security: circle;
+  -webkit-text-security: circle;
+}
+.login-form .group .label {
+  color: #aaa;
+  font-size: 12px;
+}
+.login-form .group .button {
+  background: #1161ee;
+}
+.login-form .group label .icon {
+  width: 15px;
+  height: 15px;
+  border-radius: 2px;
+  position: relative;
+  display: inline-block;
+  background: rgba(255, 255, 255, .1);
+}
+.login-form .group label .icon:before, .login-form .group label .icon:after {
+  content: '';
+  width: 10px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  transition: all .2s ease-in-out 0s;
+}
+.login-form .group label .icon:before {
+  left: 3px;
+  width: 5px;
+  bottom: 6px;
+  transform: scale(0) rotate(0);
+}
+.login-form .group label .icon:after {
+  top: 6px;
+  right: 0;
+  transform: scale(0) rotate(0);
+}
+.login-form .group .check:checked+label {
+  color: #fff;
+}
+.login-form .group .check:checked+label .icon {
+  background: #1161ee;
+}
+.login-form .group .check:checked+label .icon:before {
+  transform: scale(1) rotate(45deg);
+}
+.login-form .group .check:checked+label .icon:after {
+  transform: scale(1) rotate(-45deg);
+}
+.login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
+  transform: rotate(0);
+}
+.login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
+  transform: rotate(0);
+}
+.hr {
+  height: 2px;
+  margin: 50px 0 50px 0;
+  background: rgba(255, 255, 255, .2);
+}
+.foot-lnk {
   text-align: center;
+}
+
+/*Home page*/
+.homepagebanner {
+  width: 100%;
+  height: auto;
 }
 
 /*Chat Roulette*/
@@ -222,20 +234,17 @@ footer {
   padding: 10px;
   margin: 10px 0;
 }
-
 /* Darker chat container */
 .darker {
   border-color: #ccc;
   background-color: #ddd;
 }
-
 /* Clear floats */
 .container::after {
   content: "";
   clear: both;
   display: table;
 }
-
 /* Style images */
 .container img {
   float: left;
@@ -244,20 +253,17 @@ footer {
   margin-right: 20px;
   border-radius: 50%;
 }
-
 /* Style the right image */
 .container img.right {
   float: right;
   margin-left: 20px;
-  margin-right:0;
+  margin-right: 0;
 }
-
 /* Style time text */
 .time-right {
   float: right;
   color: #aaa;
 }
-
 /* Style time text */
 .time-left {
   float: left;
@@ -265,44 +271,42 @@ footer {
 }
 
 /* SupportPage Div styles */
-#wrapper{
-	width:1000px;
-	height:1000px;
-	background-color:white;
-	margin:auto;
+#wrapper {
+  width: 1000px;
+  height: 1000px;
+  background-color: white;
+  margin: auto;
 }
-#two{
-	width:100%;
-	height:50%;
+#two {
+  width: 100%;
+  height: 50%;
 }
-#midleft{
-	background-color:pink;
-	width:70%;
-	height:100%;
-	float:left;
+#midleft {
+  background-color: pink;
+  width: 70%;
+  height: 100%;
+  float: left;
 }
-#midright{
-	background-color:white;
-	width:30%;
-	height:100%;
-	float:right;
+#midright {
+  background-color: white;
+  width: 30%;
+  height: 100%;
+  float: right;
 }
-
-.side{
-	background:orange;
-	height:23.4%;
-	margin-bottom:3.5%;
-	width:100%;
+.side {
+  background: orange;
+  height: 23.4%;
+  margin-bottom: 3.5%;
+  width: 100%;
 }
-
 
 /*Settings Page*/
-.container {
+.settingscontainer {
   height: 65%;
   max-width: 45%;
   margin: 20px auto;
   background-color: #D3D3D3;
 }
-.btn{
-  margin-bottom:20%;
+.btn {
+  margin-bottom: 20%;
 }
