--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ a {
   height: auto;
 }
 
-/*Chat Roulette*/
+/*ChatRoulette*/
 /* Chat containers */
 .container {
   border: 2px solid #dedede;
@@ -269,7 +269,33 @@ a {
   float: left;
   color: #999;
 }
+#message-container {
+      width: 80%;
+      max-width: 1200px;
+    }
 
+    #message-container div {
+      background-color: #CCC;
+      padding: 5px;
+    }
+
+    #message-container div:nth-child(2n) {
+      background-color: #FFF;
+    }
+
+    #send-container {
+      position: fixed;
+      padding-bottom: 30px;
+      bottom: 0;
+      background-color: white;
+      max-width: 1200px;
+      width: 80%;
+      display: flex;
+    }
+
+    #message-input {
+      flex-grow: 1;
+    }
 /* SupportPage Div styles */
 #wrapper {
   width: 1000px;
