--- a/style.css
+++ b/style.css
@@ -269,33 +269,18 @@ a {
   float: left;
   color: #999;
 }
-#message-container {
-      width: 80%;
-      max-width: 1200px;
-    }
 
-    #message-container div {
-      background-color: #CCC;
-      padding: 5px;
-    }
-
-    #message-container div:nth-child(2n) {
-      background-color: #FFF;
-    }
-
-    #send-container {
-      position: fixed;
-      padding-bottom: 30px;
-      bottom: 0;
-      background-color: white;
-      max-width: 1200px;
-      width: 80%;
-      display: flex;
-    }
-
-    #message-input {
-      flex-grow: 1;
-    }
+#messgae-container{
+  width: 80%;
+  max-width:1200px;
+}
+#message-container div{
+  background-color: #CCC;
+  padding: 5px;
+}
+#message-container div:nth-child(2n){
+  background-color: #fff;
+}
 /* SupportPage Div styles */
 #wrapper {
   width: 1000px;
