--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a {
   max-width: 525px;
   min-height: 670px;
   position: relative;
-  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) center;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
 }
 .login-html {
@@ -220,10 +220,14 @@ a {
 }
 
 /*Home page*/
-.homepagebanner {
-  width: 100%;
-  height: auto;
+#homepagebanner {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  float: inherit;
 }
+
 .container {
   border: 2px solid #dedede;
   background-color: #f1f1f1;
@@ -314,6 +318,12 @@ a {
 /*Settings Page*/
 .settingscontainer {
   height: 45%;
+  max-width: 45%;
+  margin: 20px auto;
+  background-color: #D3D3D3;
+}
+.settingscontainer1 {
+  height: 55%;
   max-width: 45%;
   margin: 20px auto;
   background-color: #D3D3D3;
