--- a/style.css
+++ b/style.css
@@ -225,7 +225,8 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 80%;
+  height: 20%;
   float: inherit;
 }
 
