--- a/style.css
+++ b/style.css
@@ -233,8 +233,19 @@ a {
   background-color: #f1f1f1;
   border-radius: 10px;
   margin: 0 auto;
+  margin-bottom: 7%;
 }
-
+.homerow{
+float: left;
+width: 30%;
+height: 20%;
+text-align: center;
+border: 3px solid #a9a9a9;
+background-color: #f1f1f1;
+border-radius: 10px;
+margin: 0 auto;
+margin-bottom: 5%;
+}
 /*ChatRoulette*/
 
 /* Darker chat container */
