--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 30%;
   float: inherit;
 }
 .container {
@@ -337,6 +337,13 @@ margin-bottom: 5%;
   max-width: 45%;
   margin: 20px auto;
   background-color: #D3D3D3;
+}
+.settingscontainer2 {
+  height: 45%;
+  max-width: 45%;
+  margin: 20px auto;
+  background-color: #D3D3D3;
+  margin-bottom: 7%;
 }
 .btn {
   margin-bottom: 20%;
