--- a/style.css
+++ b/style.css
@@ -45,9 +45,14 @@ footer {
     height: auto;
   }
 }
-.well {
+.col {
   background-color: #afafae;
   border: 4px solid black;
+}
+.col-5{
+  background-color: #afafae;
+  border: 4px solid black;
+
 }
 
 /*Rating Page*/
@@ -246,44 +251,8 @@ border-radius: 10px;
 margin: 0 auto;
 margin-bottom: 5%;
 }
+
 /*ChatRoulette*/
-
-/* Darker chat container */
-.darker {
-  border-color: #ccc;
-  background-color: #ddd;
-}
-/* Clear floats */
-.container::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-/* Style images */
-.container img {
-  float: left;
-  max-width: 60px;
-  width: 100%;
-  margin-right: 20px;
-  border-radius: 50%;
-}
-/* Style the right image */
-.container img.right {
-  float: right;
-  margin-left: 20px;
-  margin-right: 0;
-}
-/* Style time text */
-.time-right {
-  float: right;
-  color: #aaa;
-}
-/* Style time text */
-.time-left {
-  float: left;
-  color: #999;
-}
-
 #messgae-container{
   width: 80%;
   max-width:1200px;
@@ -295,6 +264,8 @@ margin-bottom: 5%;
 #message-container div:nth-child(2n){
   background-color: #fff;
 }
+
+
 /* SupportPage Div styles */
 #wrapper {
   width: 1000px;
