--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body, .sticky-footer-wrapper {
   border-radius: 0;
 }
 .row.content {
-  height: 450px
+  height: 450px;
 }
 /* Set gray background color and 100% height */
 .sidenav {
