--- a/style.css
+++ b/style.css
@@ -6,25 +6,31 @@ body, .sticky-footer-wrapper {
   font: 600 16px/18px 'Open Sans', sans-serif;
   background-color: #ffff99;
 }
+
 .flex-fill {
   flex: 1 1 auto;
 }
+
 #wrapper {
   overflow-x: hidden;
 }
+
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
 }
+
 .row.content {
   height: 450px;
 }
+
 /* Set gray background color and 100% height */
 .sidenav {
   padding-top: 20px;
   background-color: #f1f1f1;
   height: 100%;
 }
+
 footer {
   background-color: #555;
   color: white;
@@ -36,27 +42,30 @@ footer {
   vertical-align: middle;
   line-height: 60px;
 }
+
 @media screen and (max-width: 767px) {
   .sidenav {
     height: auto;
     padding: 15px;
   }
+
   .row.content {
     height: auto;
   }
 }
+
 .well {
   background-color: #afafae;
   border: 3px solid black;
-  width:20%;
-  height:60%;
+  width: 20%;
+  height: 60%;
 }
-.well1{
+
+.well1 {
   background-color: #afafae;
   border: 3px solid black;
-  width:30%;
-  height:60%;
-
+  width: 30%;
+  height: 60%;
 }
 
 /*Rating Page*/
@@ -66,19 +75,24 @@ input[type="radio"] {
   outline: none;
   cursor: pointer;
 }
+
 input[type="radio"]::after {
   content: '\2605';
   font-size: 32px;
 }
+
 input[type="radio"]:invalid::after {
   color: #ccc;
 }
+
 .rating:hover input[type="radio"]:hover~input[type="radio"]:invalid::after, .rating input[type="radio"]:focus~input[type="radio"]:invalid::after {
   color: #ccc;
 }
+
 .rating input[type="radio"]:valid {
   color: orange;
 }
+
 .rating input[type="radio"]:checked~input[type="radio"]:not(:checked)::after {
   content: '\2606';
   color: gray;
@@ -88,18 +102,22 @@ input[type="radio"]:invalid::after {
 *, :after, :before {
   box-sizing: border-box;
 }
+
 .clearfix:after, .clearfix:before {
   content: '';
   display: table;
 }
+
 .clearfix:after {
   clear: both;
   display: block;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .login-wrap {
   width: 100%;
   margin: auto;
@@ -109,6 +127,7 @@ a {
   background: url(Imgs/bglogin.jpg) center;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
 }
+
 .login-html {
   width: 100%;
   height: 100%;
@@ -116,6 +135,7 @@ a {
   padding: 90px 70px 50px 70px;
   background: rgba(40, 57, 101, .9);
 }
+
 .login-html .sign-in-htm, .login-html .sign-up-htm {
   top: 0;
   left: 0;
@@ -126,12 +146,15 @@ a {
   backface-visibility: hidden;
   transition: all .4s linear;
 }
+
 .login-html .sign-in, .login-html .sign-up, .login-form .group .check {
   display: none;
 }
+
 .login-html .tab, .login-form .group .label, .login-form .group .button {
   text-transform: uppercase;
 }
+
 .login-html .tab {
   font-size: 22px;
   margin-right: 15px;
@@ -140,41 +163,50 @@ a {
   display: inline-block;
   border-bottom: 2px solid transparent;
 }
+
 .login-html .sign-in:checked+.tab, .login-html .sign-up:checked+.tab {
   color: #fff;
   border-color: #1161ee;
 }
+
 .login-form {
   min-height: 345px;
   position: relative;
   perspective: 1000px;
   transform-style: preserve-3d;
 }
+
 .login-form .group {
   margin-bottom: 15px;
 }
+
 .login-form .group .label, .login-form .group .input, .login-form .group .button {
   width: 100%;
   color: #fff;
   display: block;
 }
+
 .login-form .group .input, .login-form .group .button {
   border: none;
   padding: 15px 20px;
   border-radius: 25px;
   background: rgba(255, 255, 255, .1);
 }
+
 .login-form .group input[data-type="password"] {
   text-security: circle;
   -webkit-text-security: circle;
 }
+
 .login-form .group .label {
   color: #aaa;
   font-size: 12px;
 }
+
 .login-form .group .button {
   background: #1161ee;
 }
+
 .login-form .group label .icon {
   width: 15px;
   height: 15px;
@@ -183,6 +215,7 @@ a {
   display: inline-block;
   background: rgba(255, 255, 255, .1);
 }
+
 .login-form .group label .icon:before, .login-form .group label .icon:after {
   content: '';
   width: 10px;
@@ -191,40 +224,50 @@ a {
   position: absolute;
   transition: all .2s ease-in-out 0s;
 }
+
 .login-form .group label .icon:before {
   left: 3px;
   width: 5px;
   bottom: 6px;
   transform: scale(0) rotate(0);
 }
+
 .login-form .group label .icon:after {
   top: 6px;
   right: 0;
   transform: scale(0) rotate(0);
 }
+
 .login-form .group .check:checked+label {
   color: #fff;
 }
+
 .login-form .group .check:checked+label .icon {
   background: #1161ee;
 }
+
 .login-form .group .check:checked+label .icon:before {
   transform: scale(1) rotate(45deg);
 }
+
 .login-form .group .check:checked+label .icon:after {
   transform: scale(1) rotate(-45deg);
 }
+
 .login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
   transform: rotate(0);
 }
+
 .login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
   transform: rotate(0);
 }
+
 .hr {
   height: 2px;
   margin: 50px 0 50px 0;
   background: rgba(255, 255, 255, .2);
 }
+
 .foot-lnk {
   text-align: center;
 }
@@ -237,6 +280,7 @@ a {
   width: 25%;
   float: inherit;
 }
+
 .container {
   border: 2px solid #dedede;
   background-color: #f1f1f1;
@@ -244,31 +288,33 @@ a {
   margin: 0 auto;
   margin-bottom: 7%;
 }
-.homerow{
-float: left;
-width: 30%;
-height: 20%;
-text-align: center;
-border: 3px solid #a9a9a9;
-background-color: #f1f1f1;
-border-radius: 10px;
-margin: 0 auto;
-margin-bottom: 5%;
+
+.homerow {
+  float: left;
+  width: 30%;
+  height: 20%;
+  text-align: center;
+  border: 3px solid #a9a9a9;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-bottom: 5%;
 }
 
 /*ChatRoulette*/
-#messgae-container{
+#messgae-container {
   width: 80%;
-  max-width:1200px;
+  max-width: 1200px;
 }
-#message-container div{
+
+#message-container div {
   background-color: #CCC;
   padding: 5px;
 }
-#message-container div:nth-child(2n){
+
+#message-container div:nth-child(2n) {
   background-color: #fff;
 }
-
 
 /* SupportPage Div styles */
 #wrapper {
@@ -277,22 +323,26 @@ margin-bottom: 5%;
   background-color: white;
   margin: auto;
 }
+
 #two {
   width: 100%;
   height: 50%;
 }
+
 #midleft {
   background-color: pink;
   width: 70%;
   height: 100%;
   float: left;
 }
+
 #midright {
   background-color: white;
   width: 30%;
   height: 100%;
   float: right;
 }
+
 .side {
   background: orange;
   height: 23.4%;
@@ -307,12 +357,14 @@ margin-bottom: 5%;
   margin: 20px auto;
   background-color: #D3D3D3;
 }
+
 .settingscontainer1 {
   height: 55%;
   max-width: 45%;
   margin: 20px auto;
   background-color: #D3D3D3;
 }
+
 .settingscontainer2 {
   height: 45%;
   max-width: 45%;
@@ -320,16 +372,21 @@ margin-bottom: 5%;
   background-color: #D3D3D3;
   margin-bottom: 7%;
 }
+
 .btn {
   margin-bottom: 20%;
 }
+
 #ConColour {
   background-color: pink;
   width: 100%;
   height: 90%;
   float: left;
 }
-{box-sizing: border-box;}
+
+  {
+  box-sizing: border-box;
+}
 
 /* Button used to open the chat form - fixed at the bottom of the page */
 .open-button {
@@ -387,7 +444,7 @@ margin-bottom: 5%;
   border: none;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  margin-bottom: 10px;
   opacity: 0.8;
 }
 
@@ -400,8 +457,9 @@ margin-bottom: 5%;
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }
+
 /* Heading on Support Page */
 h1 {
-    text-align: center;
-    font-family: verdana;
+  text-align: center;
+  font-family: verdana;
 }
