--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ a {
 #wrapper {
   width: 100%;
   height: 1500px;
-  background-color: white;
+  background-color: #ffff99;
   margin: auto;
 }
 
