--- a/style.css
+++ b/style.css
@@ -332,12 +332,12 @@ a {
 #midleft {
   background-color: pink;
   width: 70%;
-  height: 100%;
+  height: 103.5%;
   float: left;
 }
 
 #midright {
-  background-color: white;
+  background-color: #ffff99;
   width: 30%;
   height: 100%;
   float: right;
@@ -345,8 +345,8 @@ a {
 
 .side {
   background: orange;
-  height: 23.4%;
-  margin-bottom: 3.5%;
+  height: 24%;
+  margin-bottom: 3.3%;
   width: 100%;
 }
 /*Support page Contact section */
@@ -395,9 +395,9 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .column, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
+.column, input[type=submit] {
+  width: 100%;
+  margin-top: 0;
   }
 }
 
@@ -509,8 +509,8 @@ input[type=submit]:hover {
   opacity: 1;
 }
 
-/* Heading on Support Page */
-h1 {
+/* Headings on Support Page */
+h2 {
   text-align: center;
   font-family: verdana;
 }
