--- a/style.css
+++ b/style.css
@@ -391,6 +391,27 @@ input[type=submit]:hover {
   }
 }
 
+/*Support Page Pulse Text*/
+.pulsate {
+  -webkit-animation: pulsate 3s ease-out;
+  -webkit-animation-iteration-count : infinite;
+  opacity: 0.5;
+  font-size: 30px;
+}
+@-webkit-keyframes pulsate {
+  0%{
+    opacity: 0.0;
+  }
+  50%{
+    opacity: 1.0;
+  }
+  100%{
+    opacity: 0.5;
+  }
+}
+
+
+
 /*Settings Page*/
 .settingscontainer {
   height: 90%;
