--- a/app.css
+++ b/app.css
@@ -179,7 +179,7 @@ strong {
 
 .header {
   background-color: #3F4343;
-  height: 34px;
+  height: 10%;
   width: 100%;
   padding: 8px 0px;
   overflow: hidden; }
